# Bachelor-Thesis

./: APIs  glTF.md  readings.md
source-code/: .gitignore  Cargo.toml  build.rs  cites.md  notes.md  readme.txt  rust-toolchain.toml  rustfmt.toml  timetable.csv
source-code/.cargo/: config.toml
source-code/app/: Cargo.toml
source-code/app/src/: app.rs  assets.rs  lib.rs  loader.rs  main.rs  mesh.rs  model.rs  scene.rs  texture.rs  triangle.rs  triangle_simple.rs  vertex.rs
source-code/app/src/animation/: mod.rs
source-code/app/src/camera/: first.rs  mod.rs  orthographic.rs  perspective.rs
source-code/app/src/controls/: mod.rs  orbital.rs
source-code/app/src/gltf/: gltf.rs  mod.rs
source-code/app/src/image/: mod.rs
source-code/app/src/mesh/primitives/: circle.rs  cube.rs  mod.rs  plane.rs  sphere.rs
source-code/app/src/renderer/: mod.rs
source-code/app/src/renderer/primitives/: frustum.rs  mod.rs
source-code/assets/models/: 2gltf2.py  2gltf2.sh
source-code/assets/models/charizard/: Charizard.glb  Charizard.gltf
source-code/assets/models/cube/: Cube.glb  Cube.gltf  cube.mtl
source-code/assets/models/moon_knight/: Moon_Knight.glb  Moon_Knight.gltf  Moon_Knight.mtl
source-code/assets/shaders/: gltf.frag.wgsl  gltf.vert.wgsl
source-code/assets/shaders/cube/: shader.wgsl
source-code/assets/shaders/model/: model.frag.vk.wgsl  model.frag.wgsl  model.vert.wgsl
source-code/assets/shaders/shadowMapping/: fragment.wgsl  vertex.wgsl  vertexShadow.wgsl
source-code/assets/shaders/triangle/: shader.frag.modern.wgsl  shader.frag.simple.wgsl  shader.frag.wgsl  shader.vert.modern.wgsl  shader.vert.simple.wgsl  shader.vert.wgsl
source-code/crates/animation/: Cargo.toml
source-code/crates/asset/: Cargo.toml
source-code/crates/asset/src/: lib.rs
source-code/crates/core/: Cargo.toml
source-code/crates/core/macros/: Cargo.toml
source-code/crates/core/macros/src/: lib.rs
source-code/crates/core/src/: size.rs
source-code/crates/gltf/: Cargo.toml
source-code/crates/gltf/src/: lib.rs
source-code/crates/transform/: Cargo.toml
source-code/crates/transform/src/: transform.rs
source-code/run-wasm/: Cargo.toml
thesis/: .gitignore  main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.out  main.run.xml  main.tex  main.toc  main.xdv
thesis/back/: appendix_a.aux  appendix_b.aux  appendix_c.aux  appendix_d.aux  printbox.aux
thesis/chapters/: closing.aux  figures.aux  latex.aux  literature.aux  mathematics.aux  printing.aux  thethesis.aux
thesis/chapters/concept/: index.aux  index.tex
thesis/chapters/conclusion/: index.tex
thesis/chapters/discussion/: index.tex
thesis/chapters/implementation/: index.tex
thesis/chapters/introduction/: goals.tex  index.aux  index.fdb_latexmk  index.fls  index.tex  motivation.tex
thesis/chapters/related_work/: index.aux  index.tex
thesis/chapters/results/: index.tex
thesis/front/: abstract.aux  kurzfassung.aux  preface.aux
